--- a/public/style.css
+++ b/public/style.css
@@ -1,10 +1,189 @@
-body {
-    font-family: 'Lato', sans-serif;
-    background-color: #d5eaf8
+@font-face {
+    font-family: Avenir Next;
+    src: url("./fonts/AvenirNextLTPro-Bold.otf") format("opentype");
+}
+html {
+    background-color: #FCDB37;
 }
 
 .imageContainer {
     background-color: white;
     height: 50vh;
     margin: 3vh;
+}
+.firstPicture {
+    background-color: transparent;
+    position: absolute;
+    width: 80px;
+    height: 80px;
+    top: 55vw;
+    left: 10vw;
+}
+.secondPicture {
+    background-color: transparent;
+    position: absolute;
+    width: 80px;
+    height: 80px;
+    top: 45vw;
+    left: 40vw;
+}
+.thirdPicture {
+    background-color: transparent;
+    position: absolute;
+    width: 80px;
+    height: 80px;
+    top: 55vw;
+    left: 70vw;
+}
+
+
+#site-container {
+    width: 100vw;
+    height: 100vh;
+    display: grid;
+    grid-template-columns: repeat(14, 1fr);
+    grid-template-rows: repeat(14, 1fr);
+    background-color: #FCDB37;
+    margin: 0%;
+
+}
+
+.large-title {
+    font-family: 'Avenir Next';
+    font-weight: bold;
+    font-size: 6em;
+    color: #ffffff;
+}
+
+.medium-title {
+    font-family: 'Avenir Next';
+    font-weight: bold;
+    font-size: 4em;
+    color: #ffffff;
+}
+
+
+.small-title {
+    font-family: 'Avenir Next';
+    font-weight: bold;
+    font-size: 3.5em;
+    color: #ffffff;
+
+}
+
+
+.body-text {
+    font-family: 'Avenir Next';
+    font-weight: bold;
+    font-size: 2.5em;
+    color: #ffffff;
+}
+
+#call-to-action {
+
+    grid-column: 2/13;
+    grid-row: 2/4;
+}
+
+#mic-ready {
+    grid-column: 5/11;
+    grid-row: 7/11;
+    color: #ffffff;
+    text-align: center;
+    max-width: 100%;
+    max-height: 100%;
+    place-items: center;
+
+}
+
+
+#mic-on {
+    grid-column: 5/11;
+    grid-row: 7/11;
+    color: #ffffff;
+    text-align: center;
+    max-width: 100%;
+    max-height: 100%;
+    display: none;
+    place-items: center;
+
+}
+
+
+#drawing-pick {
+
+    grid-column: 1/15;
+    grid-row: 6/10;
+    display: none;
+    background-color: #ffffff;
+
+
+}
+
+#animal-text {
+    grid-column: 4/12;
+    grid-row: 10/11;
+    display: none;
+    color: #ffffff;
+    align-self: center;
+    text-align: center;
+}
+
+#hashtag{
+    grid-column: 8/14;
+    grid-row: 14/14;
+    display: grid;
+    justify-self: right;
+
+}
+
+
+#redo-icon{
+    grid-column: 4/6;
+    grid-row: 12/13;
+    display: none;
+    max-width: 100%;
+    max-height: 100%;
+    text-align: center;
+
+}
+
+#reload-icon{
+    grid-column: 10/12;
+    grid-row: 12/13;
+    display: none;
+    max-width: 100%;
+    max-height: 100%;
+    text-align: center;
+
+}
+
+.padded-text {
+
+    padding-top: 0.5em;
+}
+
+#display {
+    grid-column: 2/14;
+    grid-row: 4/8;
+    display: grid;
+    background-color: #ffffff;
+    display: none;
+}
+
+
+#info {
+    grid-column: 3/8;
+    grid-row: 9/10;
+    display: grid;
+    align-self: end;
+    display: none;
+
+}
+
+#animal-fact {
+    grid-column: 3/13;
+    grid-row: 10/12;
+    /* display: grid; */
+    display: none;
 }
